--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.3"
+    "react-router-dom": "^7.9.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
